# turnkey-blueprint-template

./: .env.example  Cargo.toml  Dockerfile  README.md  foundry.toml  remappings.txt
contracts/src/: HelloBlueprint.sol
src/: lib.rs  main.rs
tests/: e2e.rs
turnkey-api/: Cargo.toml  README.md
turnkey-api/.openapi-generator/: FILES
turnkey-api/spec/: openapi_3.0.yaml
turnkey-api/src/apis/: activities_api.rs  api_keys_api.rs  authenticators_api.rs  configuration.rs  consensus_api.rs  features_api.rs  invitations_api.rs  mod.rs  organizations_api.rs  policies_api.rs  private_key_tags_api.rs  private_keys_api.rs  sessions_api.rs  signing_api.rs  user_auth_api.rs  user_recovery_api.rs  user_tags_api.rs  users_api.rs  wallets_api.rs
turnkey-api/src/models/: accept_invitation_intent.rs  accept_invitation_intent_v2.rs  accept_invitation_result.rs  access_type.rs  activate_billing_tier_intent.rs  activate_billing_tier_result.rs  activity.rs  activity_period_v1_period_address.rs  activity_response.rs  activity_status.rs  activity_type.rs  address_format.rs  any.rs  api_key.rs  api_key_curve.rs  api_key_params.rs  api_key_params_v2.rs  api_only_user_params.rs  approve_activity_intent.rs  approve_activity_request.rs  attestation.rs  authenticator.rs  authenticator_attestation_response.rs  authenticator_params.rs  authenticator_params_v2.rs  authenticator_transport.rs  config.rs  create_api_keys_intent.rs  create_api_keys_intent_v2.rs  create_api_keys_request.rs  create_api_keys_result.rs  create_api_only_users_intent.rs  create_api_only_users_result.rs  create_authenticators_intent.rs  create_authenticators_intent_v2.rs  create_authenticators_request.rs  create_authenticators_result.rs  create_invitations_intent.rs  create_invitations_request.rs  create_invitations_result.rs  (+267 more)
turnkey-rs/: Cargo.toml  README.md
turnkey-rs/src/: client.rs  lib.rs
turnkey-rs/src/functions/: create_wallet.rs
turnkey-rs/src/utils/: wallet.rs
turnkey-rs/tests/: sign_raw_payload.rs
