[package]
name = "turnkey-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
base64-url = "3.0.0"
bitcoin = "0.30"
chrono = "0.4.39"
dotenv = "0.15.0"
p256 = "0.13.2"
rand = { version = "0.9.0", features = ["thread_rng"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.138"
sha2 = "0.10.8"
solana-sdk = "2.1.12"
thiserror = "2.0.11"
tokio = "1.43.0"
zeroize = "1.8.1"

turnkey-api = { path = "../turnkey-api" }
paste = "1.0.15"
alloy-primitives = "0.8.20"

[dev-dependencies]
solana-client = "2.1.12"
